# trimmeh_b

./: .gitignore  20251207-codexlogs.md  Cargo.toml  README.md  agents.md  justfile  test-wasm-adapter.js
debian/: control  copyright  debhelper-build-stamp  files  rules  trimmeh-cli.install  trimmeh-kde.substvars
debian/.debhelper/trimmeh-cli/: dbgsym-build-ids
debian/.debhelper/trimmeh-cli/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/trimmeh-cli/dbgsym-root/usr/share/doc/: trimmeh-cli-dbgsym
debian/.debhelper/trimmeh-kde/: dbgsym-build-ids
debian/.debhelper/trimmeh-kde/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/trimmeh-kde/dbgsym-root/usr/share/doc/: trimmeh-kde-dbgsym
debian/tmp/usr/lib/x86_64-linux-gnu/trimmeh/: trimmeh-core.js
debian/tmp/usr/share/applications/: dev.trimmeh.TrimmehKDE.desktop
debian/tmp/usr/share/metainfo/: dev.trimmeh.TrimmehKDE.metainfo.xml
debian/trimmeh-cli/DEBIAN/: control  md5sums
debian/trimmeh-kde/DEBIAN/: control  md5sums
docs/: Rich-Text-Vorschau im Plasma-Tray-Menü mit Strikethrough.docx.md  clipboard-race-safety.md  core-api.md  extension-scaffold.md  kde-first-version-testing.md  kde-klipper-plan.md  kde-packaging-results.md  kde-packaging.md  kde-port-plasma6.md  kde-qa.md  packaging.md  parity-gaps.md
docs/archive-do-not-read-irrelevant/: plan-ts-core-ego.md
docs/archive_do_not_read/: Paste-Injection Berechtigung in Trimmeh-KDE_ Ursachen & Lösungen.md  Vorab-Autorisierung von XDG-Portalen (Pre-Authorization) und Integration in Trimmeh.md
docs/porting_plans/AI2/: kde-best-practices.md  kde-implementation-guide.md  kde-port-strategy.md
docs/porting_plans/AI3/: portingplanbyai3.md
docs/porting_plans/AI4/: kde-plasma6-port-plan.md
packaging/arch/: PKGBUILD
packaging/debian/trimmeh-kde/debian/: control  trimmeh-kde.install
packaging/fedora/: trimmeh-kde.spec  trimmeh.spec
scripts/: gjs-smoketest.js
shell-extension/: LICENSE  metadata.json  stylesheet.css  trimmeh_core.js  trimmeh_core_bg.wasm  trimmer.js  tsconfig.json
shell-extension/schemas/: org.gnome.shell.extensions.trimmeh.gschema.xml  org.trimmeh.gschema.xml
shell-extension/src/: clipboard.ts  clipboardWatcher.ts  extension.ts  indicator.ts  panel.ts  prefs.ts  trimmer.ts  virtualPaste.ts  wasm.ts
tests/: clipboard.test.js  fakeClipboard.js  trim-vectors.json  trimCore.test.js
trimmeh-cli/: Cargo.toml
trimmeh-cli/src/: main.rs
trimmeh-core/: Cargo.toml
trimmeh-core-js/src/: index.ts  kde-entry.ts
trimmeh-core/src/: lib.rs
trimmeh-kde/: CMakeLists.txt  README.md  TESTING.md
trimmeh-kde/src/: app_identity.cpp  app_identity.h  app_main.cpp  autostart_manager.cpp  autostart_manager.h  clipboard_watcher.cpp  clipboard_watcher.h  hotkey_manager.cpp  hotkey_manager.h  klipper_bridge.cpp  klipper_bridge.h  main.cpp  portal_paste_injector.cpp  portal_paste_injector.h  preferences_dialog.cpp  preferences_dialog.h  settings.h  settings_store.cpp  settings_store.h  tray_app.cpp  tray_app.h  trim_core.cpp  trim_core.h  trimmeh_app.cpp  trimmeh_app.h  trimmeh_clipboard_watcher.cpp  trimmeh_clipboard_watcher.h  trimmeh_js_core.cpp  trimmeh_js_core.h  trimmeh_settings.cpp  trimmeh_settings.h  trimmeh_vectors_check.cpp  trimmeh_vectors_check.h  vectors_runner.cpp
