[package]
name = "trimmeh-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "CLI for Trimmeh clipboard trimmer"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
similar = { version = "2.4", features = ["textdiff"] }
trimmeh-core = { path = "../trimmeh-core" }
