[package]
name = "trimmeh-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Clipboard command flattener core for GNOME 49+"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
wasm = ["wasm-bindgen", "serde", "serde-wasm-bindgen"]

[dependencies]
blake3 = "1.5"
regex = "1.11"
once_cell = "1.19"
wasm-bindgen = { version = "0.2.93", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
